crates/core/tests/compile_fail/validated_proposal_struct_literal.stderr
warning: unreachable expression
  --> tests/compile_fail/validated_proposal_struct_literal.rs:10:17
   |
 9 |         proposal: todo!(),
   |                   ------- any code following this expression is unreachable
10 |         report: todo!(),
   |                 ^^^^^^^ unreachable expression
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0451]: fields `proposal` and `report` of struct `ValidatedProposal` are private
  --> tests/compile_fail/validated_proposal_struct_literal.rs:9:9
   |
 8 |     let _vp = ValidatedProposal {
   |               ----------------- in this type
 9 |         proposal: todo!(),
   |         ^^^^^^^^ private field
10 |         report: todo!(),
   |         ^^^^^^ private field
